--- a/styles/style.css
+++ b/styles/style.css
@@ -110,21 +110,33 @@ html {
 }
 
 .back_arrow {
-  /* display: none; */
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 15px;
+  left: 15px;
   width: 45px;
   padding: 5px;
-  background-color: yellow;
-  border-radius: 50%;
   transition: 0.3s;
-  filter: drop-shadow(6px 6px 8px rgb(122, 118, 110));
+  filter: drop-shadow(6px 6px 8px rgb(76, 75, 72));
 }
 
-.back_arrow:hover {
+.music_button {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  width: 45px;
+  padding: 5px;
+  transition: 0.3s;
+  filter: drop-shadow(6px 6px 8px rgb(76, 75, 72));
+}
+
+.back_arrow:hover, .music_button:hover {
   transform: scale(1.1);
   cursor: pointer;
+}
+
+.music_button.clicked {
+  opacity: 0.7;
+  transform: scale(0.9);
 }
 
 #tasksPoints {
