--- a/styles/style.css
+++ b/styles/style.css
@@ -167,7 +167,19 @@ html {
   float: left;
   width: 20px;
   height: 20px;
+  transition: 0.3s;
   filter: drop-shadow(2px 2px 4px rgb(24, 23, 23));
+  animation: pointJump 3s ease-in-out alternate infinite;
+  transform: translateZ(0);
+}
+
+@keyframes pointJump {
+  90% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
 
 .overlay {
@@ -198,10 +210,12 @@ html {
 .overlay.visible {
   display: flex;
   animation: overlay-grow 500ms forwards;
+  transform: translateZ(0);
 }
 
 .overlay.visible > span {
   animation: overlayText-grow 2s ease-in-out 200ms;
+  transform: translateZ(0);
 }
 
 @keyframes overlay-grow {
@@ -237,6 +251,7 @@ html {
   position: relative;
   display: flex;
   transition: 0.7s;
+  transform: translateZ(0);
 }
 
 #balloons span {
@@ -248,6 +263,7 @@ html {
   cursor: pointer;
   animation: balloonsFlying 10s linear infinite;
   transition: width 0.5s, height 0.5s;
+  transform: translateZ(0);
 }
 
 @keyframes balloonsFlying {
@@ -284,7 +300,6 @@ html {
   justify-content: center;
   align-items: center;
   transform: translateZ(0);
-
 }
 
 .main_button {
@@ -310,13 +325,13 @@ html {
   justify-content: center;
   align-items: center;
   transform: translateZ(0);
-
 }
 
 .menu_elements {
   display: flex;
   flex-direction: column;
 }
+
 .menu_element {
   margin: 20px;
   width: 265px;
@@ -325,8 +340,19 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  transition: 0.5s;
+  animation: menuScale 3s ease alternate infinite;
+  transform: translateZ(0);
 }
+
+.menu_element:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.menu_element:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
 .menu_element span {
   font-family: 'Permanent Marker', cursive;
   color:aqua;
@@ -343,6 +369,15 @@ html {
   filter: drop-shadow(8px 8px 10px green);
   cursor: pointer;
   transform: scale(1.1);
+}
+
+@keyframes menuScale {
+  90% {
+    transform: scale(1.0)
+  }
+  100% {
+    transform: scale(1.1)
+  }
 }
 /*end menu*/
 
@@ -475,10 +510,10 @@ html {
 
 @keyframes dance2 {
   0%, 100% {
-    transform: scale(0.9);
+    transform: scale(0.95);
   }
   25% {
-    transform: scale(0.8);
+    transform: scale(0.85);
   }
   75% {
     transform: scale(1);
