--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+  background-color: rgb(203, 243, 215);
 }
 ol, ul {
 	list-style: none;
