--- a/styles/style.css
+++ b/styles/style.css
@@ -197,8 +197,6 @@ html {
   background-size: cover;
   color:aqua;
   text-shadow: 2px 3px 2px rgb(58, 53, 53);
-
-  /* text-shadow: 0 2px 0 rgb(85, 80, 80); */
   font-weight: bold;
   text-transform: uppercase;
   line-height: 1.5;
@@ -213,12 +211,6 @@ html {
 .overlay.visible {
   display: flex;
   animation: overlay-grow 500ms forwards;
-  transform: translateZ(0);
-}
-
-.overlay.visible > span {
-  animation: overlayText-grow 2s ease-in-out 200ms;
-  transform: translateZ(0);
 }
 
 @keyframes overlay-grow {
@@ -228,16 +220,7 @@ html {
   }
   to {
     background-color: rgba(173, 146, 131, 0.596);
-    font-size: 9vw;
-  }
-}
-
-@keyframes overlayText-grow {
-  0%, 100% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.3);
+    font-size: 8vw;
   }
 }
 
@@ -253,7 +236,7 @@ html {
 #balloons {
   position: relative;
   display: flex;
-  transition: 0.7s;
+  transition: all 0.5s;
   transform: translateZ(0);
 }
 
@@ -261,27 +244,22 @@ html {
   display: flex;
   position: relative;
   margin: 10px;
-  width: 5vw;
-  height: 9vw;
-  /* width: 70px;
-  height: 120px; */
   cursor: pointer;
-  animation: balloonsFlying 10s linear infinite;
-  transition: width 0.5s, height 0.5s;
+  animation: balloonsFlying 11s linear infinite;
+  transition: all 0.5s;
   transform: translateZ(0);
 }
 
 @keyframes balloonsFlying {
   0% {
-    transform: translateY(0);
     opacity: 0;
     width: 0;
     height: 0;
   }
-  10% {
+  5% {
     opacity: 1;
-    width: 70px;
-    height: 120px;
+    width: 5vw;
+    height: 13.5vh;
   }
   100% {
     transform: translateY(-900px);
