--- a/styles/style.css
+++ b/styles/style.css
@@ -210,8 +210,7 @@ html {
   transform: translateZ(0);
 }
 
-/* .overlay.visible { */
-.overlay {
+.overlay.visible {
   display: flex;
   animation: overlay-grow 500ms forwards;
 }
