--- a/styles/style.css
+++ b/styles/style.css
@@ -506,3 +506,52 @@ html {
   }
 }
 /*end logic page*/
+
+/*start logicMenu page*/
+.logic_menu_wrapper {
+  background: url(../assets/img/backgrounds/logicbg.jpg);
+  /* -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px); */
+  /* filter: blur(2px); */
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translateZ(0);
+}
+
+.logic_menu_container {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 30px;
+}
+
+.menu_item {
+  background-size: cover;
+  overflow: hidden;
+  transition: 0.5s;
+  filter: drop-shadow(8px 8px 10px rgb(41, 38, 35));
+  border: 4px solid;
+  border-image: linear-gradient(135deg, #88ff00 0%, #a035f8 100%) 1;
+}
+
+.menu_item > img {
+  width: 300px;
+  height: 200px;
+  opacity: 0.5;
+}
+
+.menu_item:first-child > img {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.menu_item:first-child:hover {
+  transform: scale(1.05);
+}
+
+/*end logicMenu page*/
