--- a/styles/style.css
+++ b/styles/style.css
@@ -540,8 +540,9 @@ html {
 }
 
 .menu_item > img {
-  width: 300px;
-  height: 200px;
+  width: auto;
+  height: 100%;
+  background-size: cover;
   opacity: 0.5;
 }
 
