--- a/styles/style.css
+++ b/styles/style.css
@@ -533,7 +533,7 @@ html {
 .menu_item {
   background-size: cover;
   overflow: hidden;
-  transition: 0.5s;
+  transition: transform 0.5s;
   filter: drop-shadow(8px 8px 10px rgb(41, 38, 35));
   border: 4px solid;
   border-image: linear-gradient(135deg, #88ff00 0%, #a035f8 100%) 1;
