--- a/styles/style.css
+++ b/styles/style.css
@@ -531,27 +531,23 @@ html {
 }
 
 .menu_item {
-  background-size: cover;
   overflow: hidden;
   transition: transform 0.5s;
   filter: drop-shadow(8px 8px 10px rgb(41, 38, 35));
   border: 4px solid;
-  border-image: linear-gradient(135deg, #88ff00 0%, #a035f8 100%) 1;
+  border-image: linear-gradient(135deg, #4bf608 0%, #ecf004 25%, #f15353 50%, #0594e7 75%, #8e16f0 100%) 1;
+  width: 20vw;
+  height: 30vh;
 }
 
-.menu_item > img {
+.level_image {
   width: auto;
   height: 100%;
-  background-size: cover;
-  opacity: 0.5;
-}
-
-.menu_item:first-child > img {
   cursor: pointer;
   opacity: 1;
 }
 
-.menu_item:first-child:hover {
+.menu_item:hover {
   transform: scale(1.05);
 }
 
