--- a/styles/style.css
+++ b/styles/style.css
@@ -369,7 +369,6 @@ html {
 
 /*start logic page*/
 .logic_game_wrapper {
-  background: url(../assets/img/backgrounds/logicbg.png);
   width: 100vw;
   height: 100vh;
   background-size: cover;
@@ -390,8 +389,9 @@ html {
 
 .game_info {
   font-family: 'Permanent Marker', cursive;
-  color:rgb(223, 158, 74);
-  text-shadow: 2px 3px 2px rgb(58, 53, 53);
+  color:rgb(255, 45, 45);
+  text-shadow: 2px 3px 2px rgb(58, 53, 53),
+  4px 5px 4px rgb(252, 247, 247);
   font-size: 35px;
   font-weight: bold;
   line-height: 1.5;
