--- a/styles/style.css
+++ b/styles/style.css
@@ -195,10 +195,9 @@ html {
   margin: 0 auto;
   font-family: 'Permanent Marker', cursive;
   background-size: cover;
-  color:aqua;
-  text-shadow: 2px 3px 2px rgb(58, 53, 53);
-
-  /* text-shadow: 0 2px 0 rgb(85, 80, 80); */
+  color:rgb(133, 253, 21);
+  text-shadow: 4px 5px 2px rgb(58, 53, 53),
+  5px 6px 4px rgb(252, 247, 247);
   font-weight: bold;
   text-transform: uppercase;
   line-height: 1.5;
@@ -342,7 +341,9 @@ html {
 .menu_element span {
   font-family: 'Permanent Marker', cursive;
   color:aqua;
-  text-shadow: 2px 3px 2px rgb(58, 53, 53);
+  /* text-shadow: 2px 3px 2px rgb(58, 53, 53);  */
+  text-shadow: 4px 5px 2px rgb(58, 53, 53),
+  5px 6px 4px rgb(252, 247, 247);
   font-size: 24px;
   font-weight: bold;
   text-transform: uppercase;
@@ -352,7 +353,7 @@ html {
 
 .menu_element:hover{
   transition: 0.3s;
-  filter: drop-shadow(8px 8px 10px green);
+  filter: drop-shadow(8px 8px 10px rgb(74, 80, 74));
   cursor: pointer;
   transform: scale(1.1);
 }
